# AI-

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: raster-icon.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  llm.rs  llm_stream.rs  metrics.rs  nlp_layout.rs  scheduler.rs  secure_settings.rs  summary_service.rs  tools.rs
src/components/: DayTimeline.tsx  SetupView.tsx  ToastStack.tsx
src/hooks/: useEngineEvents.ts
src/lib/: chatDisplay.ts  providers.ts
src/pages/: CalendarPage.tsx  DataPage.tsx  PlannerPage.tsx  SummariesPage.tsx
src/store/: uiStore.ts
